# nrms

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  bq-results-20230902.csv  main.py  pyproject.toml  queries.sql  requirements.txt  test.py  tokenizer.py  train.py
clients/: __init__.py
clients/bigquery/: __init__.py
clients/configs/: __init__.py
clients/dynamodb/: __init__.py  article.py  core.py
configs/: __init__.py
csv/: train_dataset_20230920.csv
datasets/: __init__.py  v1.py
directories/: __init__.py
models/: __init__.py  v1.py
tests/: test_dataset.csv  test_dataset_v1.py  test_doc_encoder.py  test_news_encoder.py  test_nrms_forward.py  test_pma.py  test_user_encoder.py  test_user_positional_multihead_attention.py
utils/: __init__.py
