[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "nrms"
version = "0.1.0"
description = ""
authors = ["nelly <dldyddn0624@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
brotlipy = "^0.7.0"
certifi = "^2023.7.22"
cffi = "^1.15.1"
charset-normalizer = "^3.2.0"
cryptography = "^41.0.3"
filelock = "^3.12.3"
gmpy2 = "^2.1.5"
idna = "^3.4"
jinja2 = "^3.1.2"
markupsafe = "^2.1.3"
mpmath = "^1.3.0"
networkx = "^3.1"
numpy = "^1.25.2"
pandas = "^2.1.0"
pillow = "^10.0.0"
pycparser = "^2.21"
pyopenssl = "^23.2.0"
pysocks = "^1.7.1"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
requests = "^2.31.0"
six = "^1.16.0"
sympy = "^1.12"
torch = "^2.0.1"
torchvision = "^0.15.2"
typing-extensions = "^4.7.1"
tzdata = "^2023.3"
urllib3 = ">=1.25.4"
aioboto3 = "10.3.0"
aiobotocore = {version = "2.4.1", extras = ["boto3"]}
pydantic = "^2.0.8"
pydantic-settings = "^2.0.3"
google-cloud-bigquery = "^3.11.4"
matplotlib = "^3.7.2"
transformers = {extras = ["torch"], version = "^4.33.1"}
pytorch-lightning = "^2.0.8"
lightning = {extras = ["extra"], version = "^2.0.8"}
joblib = "^1.3.2"
chardet = "^5.2.0"
wandb = "^0.15.10"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
