[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "nrms"
version = "0.1.0"
description = ""
authors = ["nelly <dldyddn0624@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
pillow = "^10.0.1"
numpy = "^1.26.0"
pandas = "^2.1.1"
pandas-gbq = "^0.19.2"
torch = "^2.0.1"
pytorch-lightning = "^2.0.9"
chardet = "^5.2.0"
seaborn = "^0.12.2"
wandb = "^0.15.11"
matplotlib = "^3.8.0"
aioboto3 = "^11.3.0"
google-cloud-bigquery = "^3.11.4"
requests = "^2.31.0"
pytest = "^7.4.2"
transformers = "^4.33.2"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
